# uberxmhf

./: .gitignore  CHANGELOG.md  COPYING  COPYING.md  LICENSE  Makefile.documentation  Makefile.in  README  README.md  README.old.md  README.rst  RELEASE  SLABS  SLABS.in  TODO-refactor.txt  autogen.sh  common.mk.in  configure.ac  configure_slab.ac  xmhf.pc.in  xmhfgeecslab.lscript  xmhfgeecslab.lscript.in  xmhfgeecslab_commonharness.mk.in  xmhfgeecslab_commontargets.mk.in  xmhfhypapp.lds  xmhfhypapp.mk  xmhfslab.lscript  xmhfslab.mk
emhf/trunk/code/: Makefile  Makefile.in  configure.ac
hypapps/trustvisor/: Makefile  Makefile.in  README.md  configure.ac  create-deb.sh
hypapps/trustvisor/buildharness/: autogen.sh
hypapps/trustvisor/doc/: building-trustvisor.md  installing-trustvisor.md  nv-storage.md  sealing-attestation.md
hypapps/trustvisor/pal_demo/: .gitignore  Makefile  caller.c  caller.h  main.c  pal.c  pal.h  test.c  test_args.c  translate.S  vmcall.h
hypapps/trustvisor/src/: Makefile  appmain.c  crypto_init.c  dump.c  emhf_callbacks.c  emhfc_log_error.c  hc_utpm.c  hptw_emhf.c  linuxrelc.c  ltc_sprng.c  nv.c  pages.c  pt.c  scode.c  tlsf.c
hypapps/trustvisor/tee-sdk/: README.md
hypapps/trustvisor/test/: hpt.c  pt.c  test_drbg.c
tee-sdk/trunk/toolchain/: Makefile.in  cc.in  configure.ac  install.sh  pkg-config.in
trustvisor/trunk/code/: Makefile  Makefile.in  autogen.sh  configure.ac  create-deb.sh
uberspark/: Makefile.in  Makefile.uberspark.in  common.mk.in  configure-uberspark.ac  configure.ac  uberspark-common.mk.in  uberspark.mk.in
uberspark/hwm/: xmhfhwm_bios.c  xmhfhwm_cpu.c  xmhfhwm_e1000.c  xmhfhwm_lapic.c  xmhfhwm_mem.c  xmhfhwm_txt.c  xmhfhwm_vtd.c
uberspark/hwm/include/: xmhfhwm_mem.h  xmhfhwm_pci.h  xmhfhwm_vtd.h
uberspark/include/: uberspark.h
uberspark/libs/: Makefile.in  configure-ubersparklibs.ac  configure.ac  ubersparklibs.mk  ubersparklibs.mk.in
uberspark/libs/libxmhfc/: Makefile  libubersparkc.mk  libxmhfc.mk
uberspark/libs/libxmhfcrypto/: Makefile  libubersparkcrypto.mk
uberspark/libs/libxmhfgeec/: Makefile  xmhfgeec_slabstubs_uvt.cS
uberspark/libs/libxmhfhw/: Makefile  libubersparkhw.mk  xmhfhw_cpu_cpuid.cS  xmhfhw_cpu_disableintr.cS  xmhfhw_cpu_enableintr.cS  xmhfhw_cpu_fls.c  xmhfhw_cpu_getgdtbase.cS  xmhfhw_cpu_getidtbase.cS  xmhfhw_cpu_getsec.cS  xmhfhw_cpu_getseccaps.c  xmhfhw_cpu_getsecparams.c  xmhfhw_cpu_getsecsenter.c  xmhfhw_cpu_getsecsexit.c  xmhfhw_cpu_getsecwakeup.c  xmhfhw_cpu_gettssbase.cS  xmhfhw_cpu_getvendor.c  xmhfhw_cpu_hasxsave.c  xmhfhw_cpu_hlt.cS  xmhfhw_cpu_inb.cS  xmhfhw_cpu_inl.cS  xmhfhw_cpu_invept.cS  xmhfhw_cpu_invvpid.cS  xmhfhw_cpu_inw.cS  xmhfhw_cpu_loadgdt.cS  xmhfhw_cpu_loadidt.cS  xmhfhw_cpu_loadtr.cS  xmhfhw_cpu_mtrrenabledisable.c  xmhfhw_cpu_mtrrrestore.c  xmhfhw_cpu_mtrrsetmemtype.c  xmhfhw_cpu_mtrrvalidate.c  xmhfhw_cpu_outb.cS  xmhfhw_cpu_outl.cS  xmhfhw_cpu_outw.cS  xmhfhw_cpu_pause.cS  xmhfhw_cpu_rdmsr.cS  xmhfhw_cpu_rdtsc.cS  xmhfhw_cpu_readcr0.cS  xmhfhw_cpu_readcr2.cS  xmhfhw_cpu_readcr3.cS  xmhfhw_cpu_readcr4.cS  (+69 more)
uberspark/tools/: Makefile  uberspark-config.ml.in  ubersparkconfig.ml.in  ucasm.mk  uccf-testhwm.c  uccomp.mk  umfmain.ml
uberspark/tools/ubp/: Makefile  Ubp.mli  ubp_main.ml
uberspark/tools/ucasm/: Makefile  Ucasm.mli  ucasm_main.ml
uberspark/tools/uccomp/: Makefile  Uccomp.mli
uberspark/tools/uhwm/: Makefile  Uhwm.mli  uhwm_main.ml
uberspark/tools/umf/: Makefile  (+1 more)
uxmhf/: .gitignore  LICENSE  Makefile  Makefile.in  README.md  UOBJLIST.in  bsconfigure.sh  buildlog.txt  configure  configure-uxmhf.ac  configure-uxmhfuobj  configure-uxmhfuobj.ac  configure.ac  uxmhf-common.mk  uxmhf-common.mk.in  uxmhf-uobjcommonharness.mk.in  uxmhf-uobjcommontargets.mk.in  uxmhf-uobjlist.in  uxmhf.mk.in
uxmhf-rpi3/: .gitignore  LICENSE  Makefile  Makefile.in  README.md  README_HYPMTSCHEDULER.md  README_MAVLINKSERHB.md  atags.c  atags.h  bcm2837.h  bootstrap.s  bsconfigure.sh  confdefs.h  config.status  configure  configure.ac  debug.c  debug.h  entry.s  main.c  miniuart.c  miniuart.h  output.txt  rpi3-cmdline.txt  rpi3-config.txt  rpi3-config.txt.in  testbed-guestos-driver  uxmhf-rpi3-bootstrap.lscript  uxmhf-rpi3.lscript
uxmhf-rpi3/autom4te.cache/: output.0  requests  traces.0
uxmhf-rpi3/bootstrap/: Makefile  bootstrap.elf  bootstrap.lscript  bsentry.S  bsentry.s  bsmain.c
uxmhf-rpi3/common/: arm8-32.s  atags.c  debug.c  mailbox.c  miniuart.c  pl011uart.c  strlen.c  subr_prf.c  whitelist.c
uxmhf-rpi3/core/: Makefile  bcm2837.c  core.ls  core.lscript  dmaprot.c  entry.s  ghcall.c  hyppgtbl.c  hyptimer.c  hypvtable.c  hypvtable.s  hypvtablestubs.S  hypvtablestubs.s  intprot.c  main.c  mmu.c  s2pgtbl.c  secboot.c  uapi_s2pgtbl.c
uxmhf-rpi3/docker/: Dockerfile  transfer.sh
uxmhf-rpi3/guestos/: Makefile  entry.s  guestos.lscript  main.c  svcvtable.s
uxmhf-rpi3/include/: arm8-32.h  atags.h  bcm2837.h  config.h  config.h.in  ctxtrace.h  ctype.h  debug.h  dmaprot.h  fdt.h  guestos.h  hypmtscheduler.h  mailbox.h  mavlinkserhb.h  miniuart.h  pa5encfs.h  pl011uart.h  stdarg.h  string.h  types.h  uagent.h  uapp-pvdriver-uart.h  uart.h  uhcalltest.h  uhsign.h  uhstateDB.h  utpm.h  utpmtest.h  whitelist.h
uxmhf-rpi3/uobjcoll/: Makefile  out.txt  sync_srchdr.sh  uberspark.json
uxmhf/include/: xmhf-config.h  xmhf-error.h  xmhf-types.h  xmhf.h
uxmhf/uobjcoll/: Makefile  uberspark.json
uxmhf/uxmhf-uobjcoll/: Makefile  uberspark.json
uxmhf/xmhf-bootloader/: Makefile  _multiboot.h  _tpm.h  init.c  init.lds  initsup.S  smp.c  txt.c  txt_acmod.c  txt_hash.c  txt_heap.c
uxmhf/xmhf-uobjs/: UOBJLIST  UOBJLIST.in
xmhf/: COPYING.md  Makefile.in  README.md  configure.ac
xmhf-slabs/xg_richguest/: Makefile  Makefile.in  configure.ac  xg_richguest.gsm  xg_richguest_code.c  xmhfgeecslab.mk.in
xmhf/doc/: amt-serial-over-lan.md  building-xmhf.md  configuring-grub.md  custom-linux-kernels.md  debugging-xmhf.md  drtm-design.md  hardware-requirements.md  installing-xmhf.md  memory-layout.md  setup-xmhf64.md  verifying-xmhf.md
xmhf/src/: Makefile.in
xmhf/xmhf/: README.md
(+5938 files in other folders)
